<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_dysgraphia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".Dysgraphia.DysgraphiaActivity">

    <TextView
        android:id="@+id/text_dysgraphia_title"
        android:layout_width="340dp"
        android:layout_height="130dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="9dp"
        android:background="@color/blueColor"
        android:letterSpacing="0.2"
        android:lineSpacingExtra="10sp"
        android:text="@string/text_dysgraphia_title"
        android:textColor="@color/darkGrey"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dysgraphia_title_desc"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="6dp"
        android:letterSpacing="0.2"
        android:lineSpacingExtra="10sp"
        android:text="@string/text_dysgraphia_title_desc"
        android:textColor="@color/darkGrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dysgraphia_title" />

    <Button
        android:id="@+id/button_dysgraphia_choose_letter"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/btnColor"
        android:letterSpacing="0.2"
        android:text="@string/button_choose_letter"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dysgraphia_title_desc" />

    <Button
        android:id="@+id/button_dysgraphia_choose_word"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/btnColor"
        android:letterSpacing="0.2"
        android:text="@string/button_choose_word"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dysgraphia_choose_letter" />

    <Button
        android:id="@+id/button_dysgraphia_home"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/btnColor"
        android:letterSpacing="0.2"
        android:text="@string/button_back"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dysgraphia_choose_word" />

</androidx.constraintlayout.widget.ConstraintLayout>